--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,4 +12,5 @@ udpcon = { path = "../../common/udpcon" }
 lagato = { path = "../../common/lagato" }
 lagato-ggez = { path = "../../common/lagato-ggez" }
 blockengine = { path = "../../common/blockengine" }
+blockengine-rendering = { path = "../../common/blockengine-rendering" }
 blockgame-server = { path = "../server" }
